# redset

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  buildme_deps
.github/workflows/: build-and-test.yml
cmake/: REDSET_ADD_TEST.cmake  REDSET_ADD_TEST_PARALLEL.cmake  REDSET_ADD_TEST_SERIAL.cmake  config.h.in  redsetConfig.cmake.in
doc/rst/: implementation.rst  redset.rst  schemes.rst
src/: CMakeLists.txt  redset.c  redset.h  redset_er.c  redset_err_mpi.c  redset_err_serial.c  redset_internal.h  redset_io.c  redset_io.h  redset_lofi.c  redset_lofi.h  redset_partner.c  redset_partner_serial.c  redset_rebuild_partner.c  redset_rebuild_xor.c  redset_reedsolomon.c  redset_reedsolomon.cu  redset_reedsolomon_common.c  redset_reedsolomon_common.h  redset_reedsolomon_gpu.cu  redset_reedsolomon_pthreads.c  redset_reedsolomon_serial.c  redset_single.c  redset_util.c  redset_util.h  redset_util_mpi.c  redset_xor.c  redset_xor.cu  redset_xor_gpu.cu  redset_xor_pthreads.c  redset_xor_serial.c
test/: CMakeLists.txt  test_config.c  test_er.c  test_redset.c
